DA submit detail OpenAPI.
